--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -3,6 +3,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@stripe/react-stripe-js": "^2.5.0",
     "@stripe/stripe-js": "^3.0.3",
+    "react-dropzone": "^14.2.3",
     "yup": "^1.3.3"
   }
 }
